--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.2.0",
     "vuejs-paginate": "^2.1.0",
     "vuelidate": "^0.7.5",
